--- a/DMT_ExaminationSystem/appsettings.json
+++ b/DMT_ExaminationSystem/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "ConnectionStrings": {
+    "DMTDBConnection": "Data Source=PC;Initial Catalog=DMTExamination;Integrated Security=True"
+  },
+  "AllowedHosts": "*"
 }
