Added new components

--- a/DMT_ExaminationSystem/ClientApp/package.json
+++ b/DMT_ExaminationSystem/ClientApp/package.json
@@ -15,19 +15,24 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.0.2",
     "rimraf": "^3.0.2",
-    "web-vitals": "^2.1.4",                
-    "workbox-background-sync": "^6.5.3",   
-    "workbox-broadcast-update": "^6.5.3",  
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
     "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",              
-    "workbox-expiration": "^6.5.3",        
-    "workbox-google-analytics": "^6.5.3",  
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
     "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",        
-    "workbox-range-requests": "^6.5.3",    
-    "workbox-routing": "^6.5.3",           
-    "workbox-strategies": "^6.5.3",        
-    "workbox-streams": "^6.5.3"
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3",
+    "@hookform/resolvers": "^1.0.0",
+    "prop-types": "^15.7.2",
+    "react-hook-form": "^6.9.2",
+    "rxjs": "^6.5.5",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "ajv": "^8.11.0",
