--- a/DMT_ExaminationSystem/appsettings.json
+++ b/DMT_ExaminationSystem/appsettings.json
@@ -2,12 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Warning"
     }
   },
   "ConnectionStrings": {
     "DMTDBConnection": "Data Source=PC;Initial Catalog=DMTExamination;Integrated Security=True"
-  },
-  "AllowedHosts": "*"
+  }
 }
