--- a/DMT_ExaminationSystem/appsettings.json
+++ b/DMT_ExaminationSystem/appsettings.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DMTDBConnection": "Data Source=PC;Initial Catalog=DMTExamination;Integrated Security=True"
-  }
+  },
+  "ProjectName": "DMT Examination System"
 }
