--- a/DMT_ExaminationSystem/ClientApp/package.json
+++ b/DMT_ExaminationSystem/ClientApp/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.0.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
+    "moment": "^2.29.4",
+    "moment-range": "^4.0.2",
     "oidc-client": "^1.11.5",
+    "prop-types": "^15.7.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^6.9.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.0.2",
     "rimraf": "^3.0.2",
+    "rxjs": "^6.5.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
@@ -28,10 +34,6 @@
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
     "workbox-streams": "^6.5.3",
-    "@hookform/resolvers": "^1.0.0",
-    "prop-types": "^15.7.2",
-    "react-hook-form": "^6.9.2",
-    "rxjs": "^6.5.5",
     "yup": "^0.29.3"
   },
   "devDependencies": {
