--- a/DMT_ExaminationSystem/ClientApp/package.json
+++ b/DMT_ExaminationSystem/ClientApp/package.json
@@ -13,6 +13,7 @@
     "oidc-client": "^1.11.5",
     "prop-types": "^15.7.2",
     "react": "^18.1.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^6.9.2",
     "react-router-bootstrap": "^0.26.1",
